# LocalKit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.es.md  README.pt.md  README.zh-CN.md
docs/plans/: 10_one-click-login.md  11_terminal.md  12_toasts.md  13_settings-store.md  14_terminal-quick-wins.md  15_command-palette-shortcuts.md  16_router-coexistence.md  17_snapshots.md  18_import-remote-site.md  19_sync-v2-chunked.md  1_local-site-lifecycle.md  20_clone-and-blueprints.md  21_cli-serverkit.md  22_multi-stack-core.md  23_reconciliation.md  24_site-tools.md  25_release-polish-completion.md  26_php-laravel-stack.md  27_visual-identity-pass.md  28_control-room.md  2_wordpress-install-and-detail.md  3_serverkit-connection.md  3_serverkit-read-only-connection.md  4_serverkit-push-pull.md  5_release-polish.md  6_local-domains.md  7_cli.md  8_system-tray.md  9_windows-console-and-install-hang.md  ROADMAP.md
docs/screenshots/: CAPTURE.md
scripts/: capture-screenshots.mjs  gen-brand-icons.mjs  generate-funding-qr.mjs  make-square-logo.py  verify-blueprints.mjs  verify-cli-serverkit.mjs  verify-import.mjs  verify-multistack.mjs  verify-router-conflict.mjs  verify-shortcuts.mjs  verify-site-tools.mjs  verify-snapshots.mjs  verify-sync-progress.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: docker_smoke.rs  m4_smoke.rs  m6_smoke.rs  mock_localkit_ext.cjs  smoke.rs  snapshot_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/lk/: Cargo.toml
src-tauri/lk/src/: main.rs
src-tauri/src/: blueprint.rs  db.rs  dbsync.rs  docker.rs  dockerapp.rs  keystore.rs  lib.rs  main.rs  php.rs  reconcile.rs  router.rs  serverkit.rs  site.rs  snapshot.rs  sync.rs  terminal.rs  transfer.rs  tray.rs  update.rs  wordpress.rs
src/components/: CloneSiteDialog.tsx  CommandPalette.tsx  ConfigEditorPanel.tsx  CopyButton.tsx  DatabasePanel.tsx  DebugPanel.tsx  DeleteSiteDialog.tsx  DomainsSettings.tsx  ImportSiteDialog.tsx  KeyboardSettings.tsx  KeyboardShortcutsDialog.tsx  KindBadge.tsx  NewSiteDialog.tsx  PushPanel.tsx  SaveBlueprintDialog.tsx  SearchReplacePanel.tsx  SectionTitle.tsx  ServerKitSettings.tsx  Sidebar.tsx  SiteTile.tsx  SiteTools.tsx  SnapshotsPanel.tsx  StatusBadge.tsx  Toasts.tsx  icons.tsx
src/hooks/: useDialog.ts  useShortcuts.ts
src/lib/: brandIconData.ts  brandIcons.tsx  commands.tsx  domains.ts  errors.test.ts  errors.ts  fuzzy.test.ts  fuzzy.ts  ipc.ts  keybindings.test.ts  keybindings.ts  notify.ts  shortcuts.test.ts  shortcuts.ts  termSuggest.ts  terminalRegistry.ts  types.ts  update.ts
src/mock/: core.ts  data.ts  event.ts  notification.ts  opener.ts
src/pages/: Dashboard.tsx  Home.tsx  Settings.tsx  SiteDetail.tsx  Terminal.tsx
src/stores/: blueprints.ts  docker.ts  nav.ts  router.ts  serverkit.ts  settings.test.ts  settings.ts  sites.ts  toast.ts
