[package]
name = "localkit"
version = "0.1.0"
description = "Local WordPress development sites powered by Docker"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "localkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# The `lk` CLI is a separate workspace member (lk/), not a [[bin]] here —
# a second [[bin]] in the GUI package breaks the macOS universal bundler.
[workspace]
members = ["lk"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
tar = "0.4"
flate2 = "1"
portable-pty = "0.8"
