[package]
name = "lk"
version = "0.1.0"
description = "LocalKit CLI — headless companion for the LocalKit desktop app"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
localkit_lib = { path = "..", package = "localkit" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
open = "5"
