[package]
name = "lk"
version = "0.1.2"
description = "LocalKit CLI — headless companion for the LocalKit desktop app"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
localkit_lib = { path = "..", package = "localkit" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
open = "5"
rpassword = "7"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
